fix api: update claim status
